--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
     <title>Frontend Mentor | [Challenge Name Here]</title>
 
     <style>
@@ -28,100 +32,112 @@
   <body>
     <section class="testimonails">
       <div class="container">
-        <div class="testimonail_wrapper">
-          <div class="user_wrapper">
-            <img src="" alt="" class="profile_pic" />
-            <div class="user_data">
-              <h2 class="user_name">Daniel Clifford</h2>
-              <span class="status"> Verified Graduate</span>
+        <div class="testimonails_wrapper">
+          <div class="testimonail_wrapper">
+            <div class="user_wrapper">
+              <img src="./images/image-daniel.jpg" alt="" class="profile_pic" />
+              <div class="user_data">
+                <h4 class="user_name">Daniel Clifford</h4>
+                <span class="status"> Verified Graduate</span>
+              </div>
             </div>
-            <h3 class="testimonial__header">
+            <h2 class="testimonial__header">
               I received a job offer mid-course, and the subjects I learned were
               current, if not more so, in the company I joined. I honestly feel
               I got every penny’s worth.
-            </h3>
-            <p class="subtitles">
-              “ I was an EMT for many years before I joined the bootcamp. I’ve
+            </h2>
+            <q class="subtitles">
+              I was an EMT for many years before I joined the bootcamp. I’ve
               been looking to make a transition and have heard some people who
               had an amazing experience here. I signed up for the free intro
               course and found it incredibly fun! I enrolled shortly thereafter.
               The next 12 weeks was the best - and most grueling - time of my
               life. Since completing the course, I’ve successfully switched
-              careers, working as a Software Engineer at a VR startup. ”
-            </p>
+              careers, working as a Software Engineer at a VR startup.
+            </q>
           </div>
-        </div>
-
-        <div class="testimonail_wrapper">
-          <div class="user_wrapper">
-            <img src="" alt="" class="profile_pic" />
-            <div class="user_data">
-              <h2 class="user_name">Jonathan Walters</h2>
-              <span class="status">Verified Graduate</span>
+          <div class="testimonail_wrapper">
+            <div class="user_wrapper">
+              <img
+                src="./images/image-jonathan.jpg"
+                alt=""
+                class="profile_pic"
+              />
+              <div class="user_data">
+                <h4 class="user_name">Jonathan Walters</h4>
+                <span class="status">Verified Graduate</span>
+              </div>
             </div>
-            <h3 class="testimonial__header">
+            <h2 class="testimonial__header">
               The team was very supportive and kept me motivated
-            </h3>
-            <p class="subtitles">
-              “ I started as a total newbie with virtually no coding skills. I
-              now work as a mobile engineer for a big company. This was one of
-              the best investments I’ve made in myself. ”
-            </p>
+            </h2>
+            <q class="subtitles">
+              I started as a total newbie with virtually no coding skills. I now
+              work as a mobile engineer for a big company. This was one of the
+              best investments I’ve made in myself.
+            </q>
           </div>
-        </div>
 
-        <div class="testimonail_wrapper">
-          <div class="user_wrapper">
-            <img src="" alt="" class="profile_pic" />
-            <div class="user_data">
-              <h2 class="user_name">Jeanette Harmon</h2>
-              <span class="status"> Verified Graduate</span>
+          <div class="testimonail_wrapper">
+            <div class="user_wrapper">
+              <img
+                src="./images/image-jeanette.jpg"
+                alt=""
+                class="profile_pic"
+              />
+              <div class="user_data">
+                <h4 class="user_name">Jeanette Harmon</h4>
+                <span class="status"> Verified Graduate</span>
+              </div>
             </div>
-            <h3 class="testimonial__header">
+            <h2 class="testimonial__header">
               An overall wonderful and rewarding experience
-            </h3>
-            <p class="subtitles">
-              “ Thank you for the wonderful experience! I now have a job I
-              really enjoy, and make a good living while doing something I love.
-              ”
-            </p>
+            </h2>
+            <q class="subtitles">
+              Thank you for the wonderful experience! I now have a job I really
+              enjoy, and make a good living while doing something I love.
+            </q>
           </div>
-        </div>
-        <div class="testimonail_wrapper">
-          <div class="user_wrapper">
-            <img src="" alt="" class="profile_pic" />
-            <div class="user_data">
-              <h2 class="user_name">Patrick Abrams</h2>
-              <span class="status">Verified Graduate</span>
+          <div class="testimonail_wrapper">
+            <div class="user_wrapper">
+              <img
+                src="./images/image-patrick.jpg"
+                alt=""
+                class="profile_pic"
+              />
+              <div class="user_data">
+                <h4 class="user_name">Patrick Abrams</h4>
+                <span class="status">Verified Graduate</span>
+              </div>
             </div>
-            <h3 class="testimonial__header">
+            <h2 class="testimonial__header">
               Awesome teaching support from TAs who did the bootcamp themselves.
               Getting guidance from them and learning from their experiences was
               easy.
-            </h3>
-            <p class="subtitles">
-              “ The staff seem genuinely concerned about my progress which I
-              find really refreshing. The program gave me the confidence
-              necessary to be able to go out in the world and present myself as
-              a capable junior developer. The standard is above the rest. You
-              will get the personal attention you need from an incredible
-              community of smart and amazing people. ”
-            </p>
+            </h2>
+            <q class="subtitles">
+              The staff seem genuinely concerned about my progress which I find
+              really refreshing. The program gave me the confidence necessary to
+              be able to go out in the world and present myself as a capable
+              junior developer. The standard is above the rest. You will get the
+              personal attention you need from an incredible community of smart
+              and amazing people.
+            </q>
           </div>
-        </div>
-        <div class="testimonail_wrapper">
-          <div class="user_wrapper">
-            <img src="" alt="" class="profile_pic" />
-            <div class="user_data">
-              <h2 class="user_name">Kira Whittle</h2>
-              <span class="status"> Verified Graduate</span>
+          <div class="testimonail_wrapper">
+            <div class="user_wrapper">
+              <img src="./images/image-kira.jpg" alt="" class="profile_pic" />
+              <div class="user_data">
+                <h4 class="user_name">Kira Whittle</h4>
+                <span class="status"> Verified Graduate</span>
+              </div>
             </div>
-            <h3 class="testimonial__header">
+            <h2 class="testimonial__header">
               Such a life-changing experience. Highly recommended!
-            </h3>
-            <p class="subtitles">
-              “ Before joining the bootcamp, I’ve never written a line of code.
-              I needed some structure from professionals who can help me learn
+            </h2>
+            <q class="subtitles">
+              Before joining the bootcamp, I’ve never written a line of code. I
+              needed some structure from professionals who can help me learn
               programming step by step. I was encouraged to enroll by a former
               student of theirs who can only say wonderful things about the
               program. The entire curriculum and staff did not disappoint. They
@@ -131,13 +147,12 @@
               have. In fact, I’ve often referred to it during interviews as an
               example of my developent experience. It certainly helped me land a
               job as a full-stack developer after receiving multiple offers.
-              100% recommend! ”
-            </p>
+              100% recommend!
+            </q>
           </div>
         </div>
       </div>
     </section>
-
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
